fixed Skills spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,6 +92,7 @@ h1 {
 }
 
 .list > li {
+    margin: 7px;
     margin-right: 50px;
 }
 
